yi/test/virtual_field/virtual.cpp

class Person {
	virtual int name;  // error: ‘name’ declared as a ‘virtual’ field
};

